# heavy-metal-filter-recommendation

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
backend/: .env.example  __init__.py  main.py
backend/engine/: data_loader.py  recommender.py
backend/models/: input.py  output.py
backend/routers/: recommend.py
backend/tests/: test_engine.py
db/: README.md  adsorption_data.csv  adsorption_data.json  filter_rules.json  heavy_metals.json  materials.json  scenarios.json
docs/: db_construction_methodology.md  dev_request.md  model_design.md  project_spec.md  추천_알고리즘_설명.md
frontend/: Dockerfile  next.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/materials/: page.tsx
frontend/app/materials/[id]/: page.tsx
frontend/components/common/: MetalChip.tsx  QualityBadge.tsx
frontend/components/input/: LevelSelector.tsx  MetalSelector.tsx  PHSelector.tsx  ScenarioSelector.tsx
frontend/components/result/: ConfidenceBadge.tsx  Disclaimer.tsx  FilterDiagram.tsx  LayerCard.tsx  LayerDetail.tsx  LayerList.tsx  RemovalTable.tsx  WarningBanner.tsx
frontend/lib/: api.ts  constants.ts  types.ts
